@@ -13,6 +13,3 @@ ExecStart=@SBINDIR@/lvmetad -f
 Environment=SD_ACTIVATION=1
 Restart=on-abort
 PIDFile=@LVMETAD_PIDFILE@
-
-[Install]
-WantedBy=sysinit.target
